@@ -3,6 +3,9 @@ Released on 2020-10-05?
 ======================================
 
 
+bpo-27115: For 'Go to Line', use a Query entry box subclass with
+IDLE standard behavior and improved error checking.
+
 bpo-39885: Since clicking to get an IDLE context menu moves the
 cursor, any text selection should be and now is cleared.
 
